<resources>
    <string name="app_name">Whistle Counter</string>
    <string name="app_title">Pressure Cooker Whistle Counter</string>
    <string name="listening_status">Ready to listen for whistles</string>
    <string name="whistle_count">Whistle Count</string>
    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="reset">Reset</string>
    <string name="instructions">Place your phone near the pressure cooker and tap \'Start Listening\' or \'Start Background\' for continuous counting. Background mode shows count in notification bar and is optimized for battery life.</string>
    <string name="permission_required">Microphone permission is required to detect whistles</string>
    <string name="permission_denied">Microphone permission denied. Please enable it in settings.</string>
</resources>
